--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,10 @@
-wikipedia==1.4.0
-nltk==3.5
 requests==2.24.0
+wikipedia==1.4.0
 pyjokes==0.6.0
+nltk==3.5
+PyAutoGUI==0.9.52
 pyttsx3==2.90
 SpeechRecognition==3.8.1
-PyAutoGUI==0.9.52
-Pillow==8.3.0
+inflect==5.3.0
+covid==2.5.0
+Pillow==8.3.1
